# tin-terrain

./: .clang-format  .dockerignore  .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.tests  LICENSE  Makefile  README.md  THIRD_PARTY  apply-clang-format.sh  build-docker.sh  check-clang-format.sh  download-deps.cmake
docs/: Mesh Generation Algorithms.md  Terra.md  Zemlya.md
include/delaunator_cpp/: Delaunator.h
include/tntn/: BinaryIO.h  DelaunayMesh.h  DelaunayTriangle.h  File.h  FileFormat.h  HorizonOcclusion.h  MercatorProjection.h  Mesh.h  Mesh2Raster.h  MeshIO.h  MeshMode.h  MeshWriter.h  OFFReader.h  ObjPool.h  Points2Mesh.h  QuadEdge.h  QuantizedMeshIO.h  Raster.h  RasterIO.h  RasterOverviews.h  SuperTriangle.h  SurfacePoints.h  TerraMesh.h  TerraUtils.h  TileMaker.h  ZemlyaMesh.h  ZoomRange.h  benchmark_workflow.h  dem2tintiles_workflow.h  endianness.h  gdal_init.h  geometrix.h  logging.h  println.h  raster_tools.h  simple_meshing.h  terra_meshing.h  tntn_assert.h  util.h  version_info.h  (+1 more)
scripts/: clang-format.sh  setup.sh
scripts/benchmarkcsv2pdf/: Pipfile  benchmarkcsv2pdf.py  tntn_benchmarks.csv
src/: BinaryIO.cpp  CircularList.cpp  Delaunator.cpp  DelaunayMesh.cpp  DelaunayTriangle.cpp  File.cpp  HorizonOcclusion.cpp  MercatorProjection.cpp  Mesh.cpp  Mesh2Raster.cpp  MeshIO.cpp  MeshWriter.cpp  OFFReader.cpp  Points2Mesh.cpp  QuadEdge.cpp  QuantizedMeshIO.cpp  RasterIO.cpp  RasterOverviews.cpp  SuperTriangle.cpp  SurfacePoints.cpp  TerraMesh.cpp  TerraUtils.cpp  TileMaker.cpp  ZemlyaMesh.cpp  benchmark_workflow.cpp  cmd.cpp  dem2tintiles_workflow.cpp  gdal_init.cpp  geometrix.cpp  logging.cpp  println.cpp  raster_tools.cpp  simple_meshing.cpp  terra_meshing.cpp  util.cpp  version_info.cpp.in  zemlya_meshing.cpp
test/: CMakeLists.txt
test/fixtures/: egm84-epsg3857.tif  valid_raster.tif
test/src/: Delaunay_tests.cpp  File_tests.cpp  Mesh_tests.cpp  OFFReader_tests.cpp  ObjPool_tests.cpp  QuantizedMeshIO_tests.cpp  RasterIO_tests.cpp  RasterOverviews_tests.cpp  Raster_tests.cpp  SimpleRange_tests.cpp  SuperTriangle_tests.cpp  SurfacePoints_tests.cpp  geometrix_tests.cpp  println_tests.cpp  raster_tools_tests.cpp  simple_meshing_tests.cpp  terra_meshing_tests.cpp  test_common.cpp  test_common.h  triangle_indices.cpp  triangle_indices.h  triangle_indices_data.cpp  util_tests.cpp  vertex_points.cpp  vertex_points.h
